# spatialmemory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.edge  ITERATION_LOG.md  README.md  SPATIAL_MEMORY_AGENT_ARCHITECTURE_DESIGN.md  SPATIAL_MEMORY_AGENT_IMPLEMENTATION_PLAN.md  docker-compose.yml  pyproject.toml  sma_app.py
.claude/rules/: code-style.md  memory-policy.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sma/: __init__.py
sma/infra/: config.py  session_manager.py
sma/memory/: episodic_memory.py  long_term_memory.py  memory_manager.py  working_memory.py
sma/perception/: chunker.py  graph_builder.py  hierarchy_mapper.py  metadata_enricher.py
sma/reasoning/: agent_runner.py  constraint_extractor.py  decision_engine.py  evidence_synthesizer.py  goal_state_detector.py  intent_classifier.py  query_rewriter.py  reasoning_chain.py  tool_caller.py
sma/reflection/: feedback_integrator.py  improvement_log.py  learning_extractor.py  memory_updater.py  outcome_evaluator.py
sma/retrieval/: context_expander.py  query_expander.py  reranker.py  retrieval_router.py  retriever.py
sma/safety/: access_controller.py  content_filter.py  input_guard.py  output_filter.py
templates/: index.html
tests/: test_sma.py
