[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sma"
version = "0.1.0"
description = "Spatial Memory Agent (SMA) - Persistent metric-semantic spatial intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Max1", email = "sam.max1.developer@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.6",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.5.0",
    "faiss-cpu>=1.7.4",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.18.0",
    "opentelemetry-sdk>=1.18.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0"
]

[project.optional-dependencies]
edge = [
    # Jetson-optimized modules: no FlashInfer or Kaolin
]
full = [
    # Workstation full stack
    "pytest>=7.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sma*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
